--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -180,7 +180,7 @@
                 <p class="default-client-name">{{item[0]}}</p>
                 <p class="client-company">{{item[1]}}</p>
                 <div class="actions">
-                    <div class="delete" style="cursor: pointer;" onclick="showModal('{{ item[2] }}')">
+                    <div class="delete" onclick="showModal('{{ item[2] }}')">
                         <div id="nfo" value=""></div>
                         <i class="fas fa-trash-alt" title="Borrar"></i>
                     </div>
