--- a/templates/work.html
+++ b/templates/work.html
@@ -134,10 +134,10 @@
                             <input type="text" id="newTotalInput" placeholder="Nuevo total" />
                         </div>
                         <div class="modal-textarea-container">
-                            <textarea id="changeTotalReason" rows="4" placeholder="Motivo del cambio"></textarea>
+                            <textarea id="TotalReason" rows="4" placeholder="Motivo del cambio"></textarea>
                         </div>
                         <div class="modal-actions">
-                            <button id="confirmTotalEdit" class="confirm-btn">Guardar</button>
+                            <button id="confirmTotalEdit" class="confirm-btn" onclick="updateCurrency()">Guardar</button>
                             <button id="cancelTotalEdit" class="cancel-btn">Cancelar</button>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                     <div class="info-title">Historial de desarrollo:</div>
                     <div class="info-box">
                         {% for text in details[9] %}
-                        {{ text }} <br>
+                        {{ text }} <br><br>
                         {% endfor %}
                     </div>
                 </div>
@@ -170,18 +170,15 @@
                                 <button class="additional-button" type="submit"><i class="bx bx-folder-open"></i> Abrir Carpeta</button>
                             </form>
                             <div class="destination-selects">
-                                <button class="status-button approved" id="status" type="button" onclick="setStatus('approved', this)">
+                                <button class="status-button approved" id="approved" type="button" onclick="setStatus('approved', this)">
                                     Aprobado
                                 </button>
-                                <button class="status-button rejected" id="status" type="button" onclick="setStatus('canceled', this)">
+                                <button class="status-button rejected" id="rejected" type="button" onclick="setStatus('canceled', this)">
                                     Rechazado
                                 </button>
                             </div>
                             
-                            
-                            
-                            
-                            <button class="additional-button" type="button" onclick="showModal('{{ nor }}')"><i class="bx bx-check-circle"></i> Completado</button>
+                            <button class="additional-button" type="button" onclick="handleComplete('{{nor}}')"><i class="bx bx-check-circle"></i> Completado</button>
                         </div>
                     </div>
                 </div>
@@ -190,10 +187,9 @@
                 
             <div class="confirmation-modal hidden" id="confirmationModal">
                 <div class="modal-content">
-                    <h3>¿Estás seguro de que deseas eliminar?</h3>
-                    <p>Esta acción no se puede deshacer.</p>
+                    <h3>¿Estás seguro de su decisión?</h3>
                     <div class="modal-actions">
-                        <button id="confirmDelete" class="confirm-btn">Sí, eliminar</button>
+                        <button id="confirmDelete" class="confirm-btn">Sí</button>
                         <button id="cancelDelete" class="cancel-btn">Cancelar</button>
                     </div>
                 </div>
@@ -202,6 +198,8 @@
             <script src="../static/js/sidebar.js"></script>
             <script src="../static/js/work.js"></script>
         </div>
+        <input type="hidden" id="id" value="{{nor}}">
+        <input type="hidden" id="user" value="{{user[0]}}">
         <iframe name="response_frame" style="border: none; width: 100%; height: 50px;"></iframe>
     </section>
 </body>
