--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
                 </ul>
             </div>
             <div class="bottom-content">
-                <li class="">
+                <li class="" id="setting">
                     <a href="{{ url_for('settings') }}">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
