--- a/templates/home.html
+++ b/templates/home.html
@@ -130,7 +130,7 @@
         
         <!-- Botones flotantes -->
 <div class="floating-buttons">
-    <button id="addButton" class="floating-btn" title="Añadir">
+    <button class="floating-btn" title="Añadir">
         <i class="fas fa-plus"></i>
     </button>
 </div>
@@ -290,13 +290,13 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="total-cost">Costo total:</label>
-                                <input type="number" id="total-cost" name="total-cost" required>
+                                <input type="number" id="total-cost" name="total-cost" required oninput="formatearMoneda()">
                             </div>
                             <div class="form-group">
                                 <label for="down-payment">Abono:</label>
                                 <div style="display: flex; align-items: center;">
-                                    <input type="number" id="down-payment" name="down-payment">
-                                    <select id="currency" name="currency">
+                                    <input type="number" id="down-payment" name="down-payment" oninput="formatearMoneda()">
+                                    <select id="currency" name="currency" onchange="formatearMoneda()">
                                         <option value="3">Bs.S</option>
                                         <option value="2">COP</option>
                                         <option value="1">USD</option>
@@ -305,8 +305,8 @@
                             </div>
                             <div class="form-group">
                                 <label for="remaining">Restante:</label>
-                                <input type="number" id="remaining" name="remaining" required readonly>
-                            </div>
+                                <input type="number" id="remaining" name="remaining" required readonly oninput="formatearMoneda()">
+                            </div>                        
                         </div>
 
                         <div class="form-row">
@@ -435,6 +435,10 @@
     <script src="../static/js/card-color.js"></script>
     <script src="../static/js/btn-floating.js"></script>
     <script>
+        function mostrarModal() {
+            var modal = document.getElementById('add-modal-content');
+            modal.style.display = 'block';
+          }
     </script>
 </body>
 
